Initial test suite added
