# lib/server/function-lambda/src/put_function.js
@@ -89,6 +89,7 @@ export function put_function(req, res, next) {
     ),
     functionPermissions: req.body.functionPermissions,
     authorizations: req.body.authorizations,
+    authentication: req.body.authentication,
 
     // stripped on GET:
     internal: { forceRebuild: req.params.rebuild, versions: {} },
@@ -474,8 +475,13 @@ function compute_build_plan_core(ctx, cb) {
     return set_build('metadata_update');
   }
 
+  if (ctx.options.internal.authentication !== ctx.options.internal.existing.internal.authentication) {
+    // Only authentication mode has changed, no need to touch the function.
+    return set_build('metadata_update');
+  }
+
   if (hashes.authorizations !== existingHashes.authorizations) {
-    // Only permissions have changed, no need to touch the function.
+    // Only authorizations have changed, no need to touch the function.
     return set_build('metadata_update');
   }
 
