# lib/server/function-tags/src/constants.js
@@ -86,6 +86,9 @@ export function convert_spec_to_tags(spec) {
     tags[get_compute_tag_key('authorizations')] = JSON.stringify(spec.authorizations);
   }
 
+  // Collect the authentication
+  tags[get_compute_tag_key('authentication')] = spec.authentication || 'none';
+
   // Create a tag for cron
   if (spec.schedule && spec.schedule.cron) {
     tags.cron = true;
